# A2A

./: 404.html  index.html  sitemap.xml
community/: index.html
documentation/: index.html
partners/: index.html
resources/: index.html
samples/python/: pyproject.toml
samples/python/agents/autogen/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
search/: search_index.json
specification/: index.html
specification/agent-card/: index.html
specification/agent-to-agent-communication/: index.html
specification/overview/: index.html
specification/sample-messages/: index.html
topics/a2a-and-mcp/: index.html
topics/agent-discovery/: index.html
topics/enterprise-ready/: index.html
topics/push-notifications/: index.html
tutorials/python/1-introduction/: index.html
tutorials/python/10-next-steps/: index.html
tutorials/python/2-setup/: index.html
tutorials/python/3-create-project/: index.html
tutorials/python/4-agent-skills/: index.html
tutorials/python/5-add-agent-card/: index.html
tutorials/python/6-start-server/: index.html
tutorials/python/7-interact-with-server/: index.html
tutorials/python/8-agent-capabilities/: index.html
tutorials/python/9-ollama-agent/: index.html
